1655 timeline fixes ribbon and mode (#1665)
* Updated ribbon copy

* Fixed edit mode persists between contacts / organizations

* Added icons for email and phone communication details items

* Ui unify scrollbar inner styles
Fix adding new email / phone number when empty

* Added missing space to ribbon text

--- a/packages/apps/spaces/components/ui-kit/organisms/timeline/timeline.module.scss
+++ b/packages/apps/spaces/components/ui-kit/organisms/timeline/timeline.module.scss
@@ -1,3 +1,5 @@
+@import "styles/mixins";
+
 .timeline {
   position: relative;
   height: 100%;
@@ -7,17 +9,6 @@
   overflow-x: hidden;
   padding: 0 var(--spacing-md) 0 0;
   margin-right: -4px;
-
-  &::-webkit-scrollbar {
-    width: 4px;
-    background-color: #f5f5f5;
-  }
-  &::-webkit-scrollbar-thumb {
-    width: 4px;
-    border-radius: var(--border-radius-md);
-    background-color: var(--secondary-color-active);
-  }
-
   &::after {
     content: ' ';
     display: block;
